# MLX_transformer

./: CMakeLists.txt  MLX C++ Reference.rst  attention.cpp  attention.h  build_script.sh  feed_forward.cpp  feed_forward.h  inference_pipeline.cpp  inference_pipeline.h  main.cpp  memory_mapped_file.cpp  memory_mapped_file.h  model_loader.cpp  model_loader.h  quantizer.cpp  quantizer.h  readme.md  transformer_block.cpp  transformer_block.h  transformer_model.cpp  transformer_model.h
